k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stroom-app
  namespace: stroom-app
  labels:
    app: stroom-app
spec:
  type: ClusterIP
  selector:
    app: stroom-app
  ports:
    - name: http
      port: 80
      targetPort: 80
