k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stroom-app
  namespace: stroom-app
spec:
  parentRefs:
    - name: cilium-external
      namespace: kube-system
  hostnames:
    - stroom.multiflex.io
  rules:
    - backendRefs:
        - name: stroom-app
          port: 80
